--- a/My Chat/gradle/libs.versions.toml
+++ b/My Chat/gradle/libs.versions.toml
@@ -5,8 +5,10 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 appcompat = "1.6.1"
 material = "1.12.0"
-activity = "1.8.0"
+activity = "1.9.0"
 constraintlayout = "2.1.4"
+googleServices = "4.4.1"
+firebaseFirestore = "25.0.0"
 
 
 
@@ -19,6 +21,11 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 countryCodePicker = {group = "com.hbb20", name = "ccp" , version = "2.5.0"}
+google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version = "33.0.0" }
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth" }
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 
