--- a/My Chat/gradle/libs.versions.toml
+++ b/My Chat/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ google-services = { group = "com.google.gms", name = "google-services", version.
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version = "33.0.0" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth" }
-
+firebaseui = {group = "com.firebaseui", name = "firebase-ui-firestore",version = "8.0.2"}
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 
