--- a/My Chat/gradle/libs.versions.toml
+++ b/My Chat/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ constraintlayout = "2.1.4"
 googleServices = "4.4.1"
 firebaseFirestore = "25.0.0"
 firebaseStorage = "21.0.0"
-
+firebaseMessaging = "24.0.0"
 
 
 [libraries]
@@ -30,7 +30,10 @@ firebaseui = {group = "com.firebaseui", name = "firebase-ui-firestore",version =
 imagepicker = {group = "com.github.dhaval2404",name = "imagepicker",version = "2.1"}
 glide = {group = "com.github.bumptech.glide",name = "glide",version = "4.16.0"}
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version = "4.12.0" }
 
+libphonenumber= { group = "com.googlecode.libphonenumber", name = "libphonenumber", version = "8.12.30" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 
